--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "brace": "^0.11.1",
     "element-ui": "^2.4.11",
     "font-awesome": "4.7",
+    "fullpage.js": "^3.0.5",
     "lodash": "^4.17.11",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.23.0",
@@ -24,6 +25,7 @@
     "tiptap": "^1.7.0",
     "tiptap-extensions": "^1.7.0",
     "vue": "^2.5.21",
+    "vue-fullpage.js": "^0.1.3",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   },
@@ -58,8 +60,8 @@
   },
   "eslintConfig": {
     "env": {
-        "browser": true,
-        "node": true
+      "browser": true,
+      "node": true
     }
   }
 }
