--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "node ./scripts/prettier.js"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "axios": "^0.18.0",
     "axios-mock-adapter": "^1.16.0",
     "brace": "^0.11.1",
